--- a/components/printers/languages/printer4lazstrconst.tr.po
+++ b/components/printers/languages/printer4lazstrconst.tr.po
@@ -1,23 +1,27 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2024-10-29 18:03+0000\n"
 "Last-Translator: Onur ERÇELEN <onur2x@gmail.com>\n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Language-Team: Turkish\n"
 "Language: tr\n"
-"X-Generator: Poedit 2.2.3\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Loco-Source-Locale: tr_TR\n"
+"X-Generator: Loco https://localise.biz/\n"
+"X-Loco-Parser: loco_parse_po"
 
 #: printer4lazstrconst.p4lrsabbrevunitsinches
 msgid "\""
-msgstr ""
+msgstr "\""
 
 #: printer4lazstrconst.p4lrsabbrevunitsmm
 msgid "mm"
-msgstr ""
+msgstr "mm"
 
 #: printer4lazstrconst.p4lrsadvanced
 msgid "Advanced"
@@ -85,7 +89,7 @@ msgstr "Varsayılan yazıcı bulunamadı."
 
 #: printer4lazstrconst.p4lrsnotavailable
 msgid "Not available"
-msgstr ""
+msgstr "Mevcut değil"
 
 #: printer4lazstrconst.p4lrsok
 msgid "Ok"
